--- a/index.html
+++ b/index.html
@@ -5,8 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Find ISS</title>
+    <style>
+        body { margin: 0; }
+    </style>
+    <script async src="https://unpkg.com/es-module-shims@1.8.0/dist/es-module-shims.js"></script>
+    <script type="importmap">
+        {
+            "imports": {
+                "three": "https://unpkg.com/three@v0.156.0/build/three.module.js",
+                "three/addons/": "https://unpkg.com/three@v0.156.0/examples/jsm/"
+            }
+        }
+    </script>
 </head>
 <body>
-    Hello World
+    <script type="module" src="/main.js"></script>
 </body>
 </html>
