--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </script>
 </head>
 <body>
-    <script>
+    <script type="module">
         import * as THREE from 'three';
         import { OrbitControls } from 'three/addons/controls/OrbitControls.js';
         import { GLTFLoader } from 'three/addons/loaders/GLTFLoader.js';
