--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         import { OrbitControls } from 'three/addons/controls/OrbitControls.js';
         import { GLTFLoader } from 'three/addons/loaders/GLTFLoader.js';
 
-        const controls = new OrbitControls(camera, renderer.domElement);
-        const loader = new GLTFLoader();
+        //const controls = new OrbitControls(camera, renderer.domElement);
+        //const loader = new GLTFLoader();
 
         const scene = new THREE.Scene();
         const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
