Moved earth model to a new assets folder

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         const fbxLoader = new FBXLoader()
         fbxLoader.load(
-            'Earth_2K.fbx',
+            '/assets/Earth_2K.fbx',
             (object) => {
                 // object.traverse(function (child) {
                 //     if ((child as THREE.Mesh).isMesh) {
